--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,15 @@ h1 {
   height: 400px;
   font-size: 50px;
   margin: 10px;
+  position: relative;
+  line-height: 10
 }
 
 h2 {
 
   text-align: center;
-  font-size: 30px
+  font-size: 30px;
+  height: 40px;
 }
 
 body {
@@ -22,6 +25,7 @@ body {
 
 h1 {
   color: red;
+
 
 }
 
