--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
 
+
+
+.para {
+  font-size: 20px;
+  margin: 50px;
+
+}
+
 .introtitle {
 
   text-align: center;
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
-  width: 700px;
+  width: 600px;
   border: ridge #4B4B4B 20px;
   background-color: #CBCFCE;
   padding: 10px;
@@ -24,12 +32,21 @@
 }
 
 
+
 header {
+
 
 }
 
 main {
 
+text-align: center;
+background-color: #CBCFCE;
+margin-top: 50px;
+margin-left: auto;
+margin-right: auto;
+border: ridge #CBCFCE 10px;
+width: 900px;
 
 }
 
@@ -41,6 +58,7 @@ footer {
 h1 {
   font-size: 50px;
   color: black;
+  text-align: center;
 
 
 }
@@ -53,8 +71,15 @@ h2 {
 }
 
 body {
-  background-color: ;
-  background-image: url('headerbg.png');
+  background-image: url("cool-background.png");
+
+
+  height: 100%;
+
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 
 }
